<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondow01" >

    <LinearLayout
        android:id="@+id/ll_m1256_crear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_m1256_titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/m1256"
            android:textColor="@color/azul_0"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_m1256_super"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/texto"
            android:textColor="@color/azul_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_m1256_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m1256_crear_perforacion" />

        <Button
            android:id="@+id/bt_m1256_crear_perforacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/per_add" />

        <TextView
            android:id="@+id/tv_m1256_perforacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m1256_perforacion" />

        <Spinner
            android:id="@+id/sp_m1256_perforacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_m1256_crear_muestra_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m1256_crear_muestra_ll" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_m1256_cant_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m1256_cant" />

            <Spinner
                android:id="@+id/sp_m1256_cant_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_m1256_crear_muestra_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/m1256_mue_add_ll" />

        <TextView
            android:id="@+id/tv_m1256_crear_muestra_lp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m1256_crear_muestra_lp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_m1256_cant_arena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m1256_cant" />

            <Spinner
                android:id="@+id/sp_m1256_cant_lp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_m1256_crear_muestra_lp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/m1256_mue_add_lp" />

        <TextView
            android:id="@+id/tv_m1256_crear_muestra_hn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m1256_crear_muestra_hn" />

        <Button
            android:id="@+id/bt_m1256_crear_muestra_hn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/m1256_mue_add_hn" />
    </LinearLayout>

</ScrollView>