<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondow01" >

    <LinearLayout
        android:id="@+id/ll_m122_crear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_m122_titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/m122"
            android:textColor="@color/azul_1"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_m122_super"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/texto"
            android:textColor="@color/azul_2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_m122_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m122_crear_perforacion" />

        <Button
            android:id="@+id/bt_m122_crear_perforacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/per_add" />

        <TextView
            android:id="@+id/tv_m122_perforacion_grava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m122_perforacion_grava" />

        <Spinner
            android:id="@+id/sp_m122_perforacion_grava"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_m122_crear_muestra_grava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m122_crear_muestra_grava" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_m122_cant_grava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m122_cant" />

            <Spinner
                android:id="@+id/sp_m122_cant_grava"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_m122_crear_muestra_grava"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/m122_mue_add_grava" />

        <TextView
            android:id="@+id/tv_m122_perforacion_areana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m122_perforacion_arena" />

        <Spinner
            android:id="@+id/sp_m122_perforacion_arena"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_m122_crear_muestra_arena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/m122_crear_muestra_arena" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_m122_cant_arena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m122_cant" />

            <Spinner
                android:id="@+id/sp_m122_cant_arena"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_m122_crear_muestra_arena"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/m122_mue_add_arena" />
    </LinearLayout>

</ScrollView>