<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondow01" >

    <LinearLayout
        android:id="@+id/ll_ano_crear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_ano_titulo_cre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/ano_cre"
            android:textColor="@color/azul_0"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_ano_super_cre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/texto"
            android:textColor="@color/azul_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ano_nota_cre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_nota" />

        <EditText
            android:id="@+id/et_ano_nota_cre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bt_ano_guardar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />
    </LinearLayout>

</ScrollView>